package com.gykj.autoupdate.weight;


import androidx.core.content.FileProvider;

/**
 * Created by ren on 2021/2/24
 */
public class AutoUpdateFileProvider extends FileProvider {
}
