@startuml

title __WEIGHT's Class Diagram__\n

  namespace com.gykj.autoupdate {
    namespace weight {
      class com.gykj.autoupdate.weight.AutoUpdateFileProvider {
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace weight {
      class com.gykj.autoupdate.weight.ProgressDialog {
          {static} - progressDialog : ProgressDialog
          + ProgressDialog()
          + ProgressDialog()
          {static} + closeProgressDialog()
          {static} + createDialog()
          {static} + getDialog()
          + onKeyDown()
          + onWindowFocusChanged()
          {static} + setDialog()
          + setMessage()
          {static} + showIrrevocableProgressDialog()
          {static} + showProgressDialog()
          {static} - isLiving()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace weight {
      class com.gykj.autoupdate.weight.UpdateDialog {
          - DEFAULT_FILE_DIR : String
          - context : Context
          - description : TextView
          - dialogButtonColor : int
          - dialogButtonTextColor : int
          - dialogImage : int
          - forcedUpgrade : boolean
          - ibClose : View
          - isMultithread : boolean
          - ivBg : ImageView
          - line : View
          - llProgress : LinearLayout
          - llUpdate : LinearLayout
          - progressBar : CircleProgressBar
          - title : TextView
          - update : Button
          - url : String
          + UpdateDialog()
          + UpdateDialog()
          + UpdateDialog()
          + UpdateDialog()
          + onClick()
          - downloadApk()
          - initDialogView()
          - setWindowSize()
      }
    }
  }
  

  com.gykj.autoupdate.weight.AutoUpdateFileProvider -up-|> androidx.core.content.FileProvider
  com.gykj.autoupdate.weight.ProgressDialog -up-|> android.app.Dialog
  com.gykj.autoupdate.weight.UpdateDialog .up.|> android.view.View.OnClickListener
  com.gykj.autoupdate.weight.UpdateDialog -up-|> android.app.Dialog
  com.gykj.autoupdate.weight.UpdateDialog o-- com.gykj.autoupdate.net.DownloadManager : mDownloadManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
